[package]
name = "exchain-commons"
version = "0.1.0"
edition = "2024"
authors = ["juanjo <https://github.com/juanjovazpar>"]

[dependencies]
axum = "0.7"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
validator = { version = "0.18", features = ["derive"] }
tonic = "0.14.2"
prost = "0.14.1"
prost-types = "0.14.1"
tokio = { version = "1", features = ["full"] }
tonic-prost = "0.14.2"

[build-dependencies]
tonic-prost-build = "0.14.1"
